# litrevai

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/get_started/: get_started.rst
docs/source/reference/: literature_review.rst  project.rst  query.rst  topic_modelling.rst
src/litrevai/: __about__.py  __init__.py  acm.py  binder.py  database.py  extract.py  literature_review.py  pdf2text.py  project.py  prompt.py  query.py  schema.py  topic_modelling.py  util.py  vector_store.py  zotero_connector.py
src/litrevai/data/prompts/: criteria.txt  likert.txt  list.txt  list_extraction  open.txt  options.txt  yes_no.txt
src/litrevai/llm/: __init__.py  base.py  custom_endpoint.py  huggingface_endpoint.py  openai_endpoint.py
src/litrevai/model/: __init__.py  database.py  models.py  vector_store.py
tests/: __init__.py  conftest.py  test_literature_review.py  test_llm.py
tests/data/: example.bib
tests/data/bibliography_example/: references.bib
